added more to overview page

--- a/views/partials/overview/ability-score-block.handlebars
+++ b/views/partials/overview/ability-score-block.handlebars
@@ -1,5 +1,5 @@
 <label for={{score}}>{{score}}</label>
 <input type="number" id="total{{score}}" value={{value}} style="width: 40px">
-<input type="number" id="{{score}}Mod" value={{calcMod value temp}} style="width: 40px" readonly>
+<input type="number" id="{{score}}Mod" value={{calcMod value temp}} style="width: 40px">
 <input type="number" id="temp{{score}}" value={{temp}} style="width: 40px">
 <br>
