refactored folder layout

--- a/app/public/css/stats-style.css
+++ b/app/public/css/stats-style.css
@@ -340,7 +340,7 @@ left:45%;
   color: white;
 }
 
-#sbOne, #sbTwo {
+#feats1, #feats2 {
   color: #99a28f;
   min-width: 300px;
   min-height: 200px;
