--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,166 +1,285 @@
-<!-------------------BODY -------------------->
+<body>
+   
+ <!-------------------BODY -------------------->
+
+<div class="row">
+  <div class="col-sm-6">
+    <!-- Ability Range Sliders -->
+<!-- <hr> -->
+<h1>SET YOUR ABILITY SCORE</h1>
+<!-- <hr> -->
+<div class="ability-score">
+<div class="range-slider"><h2>Strength</h2>
+  <input class="range-slider__range" type="range" value="45" min="0" max="50">
+  <span id="strength" class="range-slider__value">20</span>
+</div>
+
+
+<div class="range-slider">
+  <h2>Dexterity</h2>
+  <input class="range-slider__range" type="range" value="25" min="0" max="50" step="5">
+  <span id="dexterity" class="range-slider__value">0</span>
+</div>
+
+
+<div class="range-slider">
+  <h2>Constitution</h2>
+  <input class="range-slider__range" type="range" value="0" min="0" max="50">
+  <span id="constitution" class="range-slider__value">0</span>
+</div> 
+
+
+<div class="range-slider">
+  <h2>Intelligence</h2>
+  <input class="range-slider__range" type="range" value="0" min="0" max="50">
+  <span id="intelligence" class="range-slider__value">0</span>
+</div> 
+
+
+<div class="range-slider">
+  <h2>Wisdom</h2>
+  <input class="range-slider__range" type="range" value="0" min="0" max="50">
+  <span id= "wisdom" class="range-slider__value">0</span>
+</div> 
+
+
+<div class="range-slider">
+  <h2>Charisma</h2>
+  <input class="range-slider__range" type="range" value="0" min="0" max="50">
+  <span id="charisma" class="range-slider__value">0</span>
+</div>
+</div>
+</div>
+
+
 <!-- Carousel #1 -->
+<div class="col-sm-6">
 <h1>CHOOSE YOUR RACE</h1>
 
-
 <body class="carousel-bg">
-  <!-- Carousel Image -->
-  <div>
-    <img
-      src="https://image.winudf.com/v2/image1/Y29tLmFuZHJvaWRib2subXlmaXJzdHJlc291cmNldGVzdGVyYXBwX2ljb25fMTU2NzAxMjk5Ml8wMzE/icon.png?w=170&fakeurl=1"
-      class="img-responsive quote-image">
+<!-- Carousel Image -->
+<div>
+<img
+src="https://image.winudf.com/v2/image1/Y29tLmFuZHJvaWRib2subXlmaXJzdHJlc291cmNldGVzdGVyYXBwX2ljb25fMTU2NzAxMjk5Ml8wMzE/icon.png?w=170&fakeurl=1"
+class="img-responsive quote-image">
+</div>
+<!-- Carousel Start below -->
+<div id="carousel1" class="carousel slide testimonial-style" data-ride="carousel">
+<!-- Indicators -->
+<ol class="carousel-indicators">
+<li data-target="#carousel1" data-slide-to="0" class="active"></li>
+<li data-target="#carousel1" data-slide-to="1"></li>
+<li data-target="#carousel1" data-slide-to="2"></li>
+<li data-target="#carousel1" data-slide-to="3"></li>
+<li data-target="#carousel1" data-slide-to="4"></li>
+<li data-target="#carousel1" data-slide-to="5"></li>
+<li data-target="#carousel1" data-slide-to="6"></li>
+</ol>
+<!-- Wrapper for slides -->
+<div class="carousel-inner">
+<div id="dwarf" class="item active">
+  <div class="carousel-caption testimonial-caption-style">
+    <img src="public/images/sword.png" class="img-responsive quote-image">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Dwarf</p>
   </div>
-  <!-- Carousel Start below -->
-  <div id="carousel1" class="carousel slide testimonial-style" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel1" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel1" data-slide-to="1"></li>
-      <li data-target="#carousel1" data-slide-to="2"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="carousel-caption testimonial-caption-style">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-          <p class="testimonial-authors">Dwarf</p>
-        </div>
-      </div>
-      <div class="item">
-        <div class="carousel-caption testimonial-caption-style">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-          <p class="testimonial-authors">Human</p>
-        </div>
-      </div>
-      <div class="item">
-        <div class="carousel-caption testimonial-caption-style">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-          <p class="testimonial-authors">Elf</p>
-        </div>
-      </div>
+</div>
+<div id="human" class="item">
+  <img src=" " class="img-responsive quote-image">
+  <div class="carousel-caption testimonial-caption-style">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Human</p>
+  </div>
+</div>
+<div id="elf" class="item">
+  <div class="carousel-caption testimonial-caption-style">
+    <img src=" " class="img-responsive quote-image">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Elf</p>
+  </div>
+</div>
+  <div id="halfling" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Halfling</p>
     </div>
-
-    <a class="left carousel-control" href="#carousel1" data-slide="prev"> <span
-        class="glyphicon glyphicon-chevron-left"></span> </a>
-    <a class="right carousel-control" href="#carousel1" data-slide="next"> <span
-        class="glyphicon glyphicon-chevron-right"></span> </a>
+</div>
+<div id="gnome" class="item">
+  <img src=" " class="img-responsive quote-image">
+  <div class="carousel-caption testimonial-caption-style">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Gnome</p>
   </div>
+</div>
+<div id="halfElf" class="item">
+  <img src=" " class="img-responsive quote-image">
+  <div class="carousel-caption testimonial-caption-style">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Half-Elf</p>
+  </div>
+</div>
+<div id="halfOrc" class="item">
+  <img src=" " class="img-responsive quote-image">
+  <div class="carousel-caption testimonial-caption-style">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+    <p class="testimonial-authors">Half-Orc</p>
+  </div>
+</div>
 
 
-  <!-- Carousel #2 -->
+<a class="left carousel-control" href="#carousel1" data-slide="prev"> <span
+  class="glyphicon glyphicon-chevron-left"></span> </a>
+<a class="right carousel-control" href="#carousel1" data-slide="next"> <span
+  class="glyphicon glyphicon-chevron-right"></span> </a>
 
+</div>
+</div>
+</div>
+
+<!-- Carousel #2 -->
+<div class="row">
+<div class="col-sm-6">
+  <br>
   <h1>CHOOSE YOUR CLASS</h1>
 
+<body class="carousel-bg2">
 
-  <body class="carousel-bg2">
-    <!-- Carousel Image -->
-    <div>
-      <img
-        src="https://image.winudf.com/v2/image1/Y29tLmFuZHJvaWRib2subXlmaXJzdHJlc291cmNldGVzdGVyYXBwX2ljb25fMTU2NzAxMjk5Ml8wMzE/icon.png?w=170&fakeurl=1"
-        class="img-responsive quote-image">
-    </div>
-    <!-- Carousel Start below -->
-    <div id="carousel2" class="carousel slide testimonial-style" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel2" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel2" data-slide-to="1"></li>
-        <li data-target="#carousel2" data-slide-to="2"></li>
-      </ol>
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <div class="carousel-caption testimonial-caption-style">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-            <p class="testimonial-authors">Wizard</p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="carousel-caption testimonial-caption-style">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-            <p class="testimonial-authors">Rouge</p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="carousel-caption testimonial-caption-style">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
-            <p class="testimonial-authors">Monk</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Controls -->
-
-      <a class="left carousel-control" href="#carousel2" data-slide="prev"> <span
-          class="glyphicon glyphicon-chevron-left"></span> </a>
-      <a class="right carousel-control" href="#carousel2" data-slide="next"> <span
-          class="glyphicon glyphicon-chevron-right"></span> </a>
-    </div>
-  </body>
-
-  <!-- Ability Range Sliders -->
-
-  <h1>SET YOUR ABILITY SCORE</h1>
-
-  <div class="ability-score">
-    <div class="range-slider">
-      <h2>Strength</h2>
-      <input class="range-slider__range" type="range" value="45" min="0" max="50">
-      <span class="range-slider__value">20</span>
-    </div>
-
-
-    <div class="range-slider">
-      <h2>Dexterity</h2>
-      <input class="range-slider__range" type="range" value="25" min="0" max="50" step="5">
-      <span class="range-slider__value">0</span>
-    </div>
-
-
-    <div class="range-slider">
-      <h2>Constitution</h2>
-      <input class="range-slider__range" type="range" value="0" min="0" max="50">
-      <span class="range-slider__value">0</span>
-    </div>
-
-
-    <div class="range-slider">
-      <h2>Intelligence</h2>
-      <input class="range-slider__range" type="range" value="0" min="0" max="50">
-      <span class="range-slider__value">0</span>
-    </div>
-
-
-    <div class="range-slider">
-      <h2>Wisdom</h2>
-      <input class="range-slider__range" type="range" value="0" min="0" max="50">
-      <span class="range-slider__value">0</span>
-    </div>
-
-
-    <div class="range-slider">
-      <h2>Charisma</h2>
-      <input class="range-slider__range" type="range" value="0" min="0" max="50">
-      <span class="range-slider__value">0</span>
+<!-- Carousel Start below -->
+<div id="carousel2" class="carousel slide testimonial-style" data-ride="carousel">
+<!-- Indicators -->
+<ol class="carousel-indicators">
+  <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+  <li data-target="#carousel2" data-slide-to="1"></li>
+  <li data-target="#carousel2" data-slide-to="2"></li>
+  <li data-target="#carousel2" data-slide-to="3"></li>
+  <li data-target="#carousel2" data-slide-to="4"></li>
+  <li data-target="#carousel2" data-slide-to="5"></li>
+  <li data-target="#carousel2" data-slide-to="6"></li>
+  <li data-target="#carousel2" data-slide-to="7"></li>
+  <li data-target="#carousel2" data-slide-to="8"></li>
+  <li data-target="#carousel2" data-slide-to="9"></li>
+  <li data-target="#carousel2" data-slide-to="10"></li>
+</ol>
+<!-- Wrapper for slides -->
+<div class="carousel-inner">
+  <div id="wizard" class="item active">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Wizard</p>
     </div>
   </div>
+  <div id="rouge" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Rouge</p>
+    </div>
+  </div>
+  <div id="monk" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Monk</p>
+    </div>
+  </div>
+  <div id="barbarian" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Barbarian</p>
+    </div>
+  </div>
+  <div id="bard" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">bard</p>
+    </div>
+  </div>
+  <div id="cleric" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Cleric</p>
+    </div>
+  </div>
+  <div id="druid" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Druid</p>
+    </div>
+  </div>
+  <div id="fighter" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Fighter</p>
+    </div>
+  </div>
+  <div id="paladin" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Paladin</p>
+    </div>
+  </div>
+  <div id="ranger" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Ranger</p>
+    </div>
+  </div>
+  <div id="sorcerer" class="item">
+    <img src=" " class="img-responsive quote-image">
+    <div class="carousel-caption testimonial-caption-style">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Vitae semper quis lectus nulla at volutpat diam.</p>
+      <p class="testimonial-authors">Sorcerer</p>
+    </div>
+  </div>
+</div>
 
-  <br>
+<!-- Controls -->
 
-  <a href="editor">
-    <button type="button" class="btn btn-info2" style="margin-bottom: 20px;">CREATE CHARACTER
-    </button>
-  </a>
+<a class="left carousel-control" href="#carousel2" data-slide="prev"> <span
+    class="glyphicon glyphicon-chevron-left"></span> </a>
+<a class="right carousel-control" href="#carousel2" data-slide="next"> <span
+    class="glyphicon glyphicon-chevron-right"></span> </a>
+</div>
+</body>
+</div>
+</div>
+<br>
+
+<a href="editor">
+<button type="button" class="btn btn-info2" style="margin-bottom: 30px;">CREATE CHARACTER
+</button>
+</a>
 
 
   <script>
-    //  ----------CAROUSELS -----------------
+    //  ----------CAROUSELS Script-----------------
 
     $(document).ready(function () {
       $("#myCarousel").on("slide.bs.carousel", function (e) {
